logs/koslab.messengerbot.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Beaker-1.9.0.egg-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/WebOb-1.7.4.dist-info'...
Listing './lib/python3.5/site-packages/amqp'...
Listing './lib/python3.5/site-packages/amqp-2.2.2.dist-info'...
Listing './lib/python3.5/site-packages/beaker'...
Listing './lib/python3.5/site-packages/beaker/crypto'...
Listing './lib/python3.5/site-packages/beaker/ext'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/dectate'...
Listing './lib/python3.5/site-packages/dectate/tests'...
Listing './lib/python3.5/site-packages/dectate/tests/fixtures'...
Listing './lib/python3.5/site-packages/dectate-0.13.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/importscan'...
Listing './lib/python3.5/site-packages/importscan/tests'...
Listing './lib/python3.5/site-packages/importscan/tests/fixtures'...
Listing './lib/python3.5/site-packages/importscan/tests/fixtures/attributeerror'...
Listing './lib/python3.5/site-packages/importscan/tests/fixtures/attributeerror_not_handle_error'...
Listing './lib/python3.5/site-packages/importscan/tests/fixtures/empty_package'...
Listing './lib/python3.5/site-packages/importscan/tests/fixtures/empty_subpackage'...
Listing './lib/python3.5/site-packages/importscan/tests/fixtures/empty_subpackage/subpackage'...
Listing './lib/python3.5/site-packages/importscan/tests/fixtures/ignore_module'...
Listing './lib/python3.5/site-packages/importscan/tests/fixtures/ignore_module_absolute'...
Listing './lib/python3.5/site-packages/importscan/tests/fixtures/ignore_module_function'...
Listing './lib/python3.5/site-packages/importscan/tests/fixtures/ignore_subpackage'...
Listing './lib/python3.5/site-packages/importscan/tests/fixtures/ignore_subpackage/sub'...
Listing './lib/python3.5/site-packages/importscan/tests/fixtures/ignore_subpackage_function'...
Listing './lib/python3.5/site-packages/importscan/tests/fixtures/ignore_subpackage_function/sub'...
Listing './lib/python3.5/site-packages/importscan/tests/fixtures/ignore_subpackage_module'...
Listing './lib/python3.5/site-packages/importscan/tests/fixtures/ignore_subpackage_module/sub'...
Listing './lib/python3.5/site-packages/importscan/tests/fixtures/importerror'...
Listing './lib/python3.5/site-packages/importscan/tests/fixtures/importerror_handle_error'...
Listing './lib/python3.5/site-packages/importscan/tests/fixtures/package'...
Listing './lib/python3.5/site-packages/importscan/tests/fixtures/subpackage'...
Listing './lib/python3.5/site-packages/importscan/tests/fixtures/subpackage/sub'...
Listing './lib/python3.5/site-packages/importscan-0.1.egg-info'...
Listing './lib/python3.5/site-packages/kombu'...
Listing './lib/python3.5/site-packages/kombu/async'...
Listing './lib/python3.5/site-packages/kombu/async/aws'...
Listing './lib/python3.5/site-packages/kombu/async/aws/sqs'...
Listing './lib/python3.5/site-packages/kombu/async/http'...
Listing './lib/python3.5/site-packages/kombu/transport'...
Listing './lib/python3.5/site-packages/kombu/transport/sqlalchemy'...
Listing './lib/python3.5/site-packages/kombu/transport/virtual'...
Listing './lib/python3.5/site-packages/kombu/utils'...
Listing './lib/python3.5/site-packages/kombu-4.1.0.dist-info'...
Listing './lib/python3.5/site-packages/koslab'...
Listing './lib/python3.5/site-packages/koslab/messengerbot'...
Compiling './lib/python3.5/site-packages/koslab/messengerbot/bots.py'...
***   File "./lib/python3.5/site-packages/koslab/messengerbot/bots.py", line 78
    print "Configuring %s for PageID:%s" % (
                                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/koslab/messengerbot/scripts.py'...
***   File "./lib/python3.5/site-packages/koslab/messengerbot/scripts.py", line 9
    print "%s [config.yml]" % sys.argv[0]
                          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/koslab.messengerbot-1.0b5.egg-info'...
Listing './lib/python3.5/site-packages/morepath'...
Listing './lib/python3.5/site-packages/morepath/tests'...
Listing './lib/python3.5/site-packages/morepath/tests/fixtures'...
Listing './lib/python3.5/site-packages/morepath/tests/fixtures/config'...
Listing './lib/python3.5/site-packages/morepath/tests/fixtures/pkg'...
Listing './lib/python3.5/site-packages/morepath/tests/fixtures/scenario'...
Listing './lib/python3.5/site-packages/morepath/tests/fixtures/self_scan'...
Listing './lib/python3.5/site-packages/morepath/tests/fixtures/templates'...
Listing './lib/python3.5/site-packages/morepath/tests/fixtures/templates2'...
Listing './lib/python3.5/site-packages/morepath-0.18.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/reg'...
Listing './lib/python3.5/site-packages/reg/tests'...
Listing './lib/python3.5/site-packages/reg/tests/fixtures'...
Listing './lib/python3.5/site-packages/reg-0.11.dist-info'...
Listing './lib/python3.5/site-packages/repoze'...
Listing './lib/python3.5/site-packages/repoze/lru'...
Listing './lib/python3.5/site-packages/repoze.lru-0.7.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/vine'...
Listing './lib/python3.5/site-packages/vine-1.1.4.dist-info'...
Listing './lib/python3.5/site-packages/webob'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
